objects/vlocity_cmt__CustomerInteraction__c.object
<CustomObject>
    <description>An interaction between a customer, prospect, partner or other contact and your organization. Could be a phone call, a web site visit, a mobile application session or an in-person meeting.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>vlocity_cmt__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Site__c</fullName>
        <label>Business Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedFields__c</fullName>
        <formula>vlocity_cmt__AccountId__r.Name + &apos; &apos; +  Id + &apos; &apos; +  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CombinedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name__c</fullName>
        <formula>vlocity_cmt__AccountId__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <formula>vlocity_cmt__AccountId__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Lifetime_Value__c</fullName>
        <formula>vlocity_cmt__AccountId__r.vlocity_cmt__NetWorth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>vlocity_cmt__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tier__c</fullName>
        <formula>TEXT(vlocity_cmt__AccountId__r.vlocity_cmt__vCustomerPriority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Queries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <formula>Owner:User.Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Owner:User.Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Owner:User.Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Owner:User.Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Owner:User.Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Owner:User.Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Owner:User.Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Owner:User.Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Owner:User.Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Owner:User.Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Owner:User.Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Owner:User.Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Owner:User.Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Owner:User.Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Owner:User.Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Owner:User.Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Time__c</fullName>
        <label>Planned Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rank_In_Queue__c</fullName>
        <label>Rank In Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Troubleshoot_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshoot Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Change_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade/Change Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wait_For_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait For Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wait_Time__c</fullName>
        <formula>IF( ISPICKVAL( vlocity_cmt__Status__c, &apos;Waiting In Queue&apos;) ,  DATETIMEVALUE(TODAY()) - DATETIMEVALUE(CreatedDate), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interactions</relationshipLabel>
        <relationshipName>CustomerInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Rep</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Retail Kiosk</fullName>
                </value>
                <value>
                    <fullName>Door to Door</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConsoleCardLayout__c</fullName>
        <label>Console Card Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Interactions</relationshipLabel>
        <relationshipName>CustomerInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DurationInMinute__c</fullName>
        <formula>IF( AND(NOT(ISNULL( vlocity_cmt__EndDateTime__c )),NOT(ISNULL( vlocity_cmt__StartDateTime__c ))) ,  (vlocity_cmt__EndDateTime__c -  vlocity_cmt__StartDateTime__c)*24*60 , IF(AND(ISNULL( vlocity_cmt__EndDateTime__c ), NOT(ISNULL( vlocity_cmt__StartDateTime__c ))), ( NOW() - vlocity_cmt__StartDateTime__c)*24*60, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting On Someone Else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Waiting in Queue</fullName>
                </value>
                <value>
                    <fullName>Attempting Contact From Queue</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Abandoned Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Drop In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerificationTimestamp__c</fullName>
        <label>Verification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerifiedAgentName__c</fullName>
        <label>Verified Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Interaction</label>
    <listViews>
        <fullName>View_to_Prep_Queue_for_Demo</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>Customer_Lifetime_Value__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Tier__c</columns>
        <columns>Planned_Start_Time__c</columns>
        <columns>Rank_In_Queue__c</columns>
        <columns>vlocity_cmt__Status__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>Wait_Time__c</columns>
        <columns>vlocity_cmt__DurationInMinute__c</columns>
        <columns>Wait_For_Call__c</columns>
        <columns>Troubleshoot_Service__c</columns>
        <columns>Text_Mobile__c</columns>
        <columns>Owner_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__Status__c</field>
            <operation>equals</operation>
            <value>Waiting in Queue</value>
        </filters>
        <filters>
            <field>vlocity_cmt__Type__c</field>
            <operation>equals</operation>
            <value>Call,Appointment,Drop In</value>
        </filters>
        <label>View to Prep Queue for Demo</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>vlocity_cmt__Channel__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__Status__c</columns>
        <columns>vlocity_cmt__ContactId__c</columns>
        <columns>vlocity_cmt__Comments__c</columns>
        <columns>vlocity_cmt__DurationInMinute__c</columns>
        <columns>vlocity_cmt__EndDateTime__c</columns>
        <columns>vlocity_cmt__StartDateTime__c</columns>
        <columns>vlocity_cmt__VerifiedAgentName__c</columns>
        <columns>vlocity_cmt__VerificationTimestamp__c</columns>
        <columns>vlocity_cmt__Verified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>